--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "author": "Pine Mizune <pinemz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "cheerio": "^1.0.0-rc.2"
+    "cheerio": "^1.0.0-rc.2",
+    "fancy-log": "^1.3.2",
+    "got": "^9.2.2",
+    "lodash": "^4.17.11",
+    "numeral": "^2.0.6",
+    "voca": "^1.4.0"
   }
 }
