--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
-  "name": "ana-mile",
+  "name": "@ezsfc/miles-gen",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:pine/ana-mile.git",
-  "author": "Pine Mizune <pinemz@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
+  "description": "ANA miles generator.",
+  "bin": "./bin/cli.js",
+  "files": [
+    "bin",
+    "*.md"
+  ],
+  "dependencies": {
+    "@ezsfc/airports": "^0.1.0",
     "cheerio": "^1.0.0-rc.2",
-    "fancy-log": "^1.3.2",
     "got": "^9.2.2",
     "lodash": "^4.17.11",
     "numeral": "^2.0.6",
     "voca": "^1.4.0"
-  }
+  },
+  "author": {
+    "name": "Pine Mizune",
+    "email": "pinemz@gmail.com",
+    "url": "https://github.com/pine"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ezsfc/miles-gen"
+  },
+  "bugs": {
+    "url": "https://github.com/ezsfc/miles-gen/issues"
+  },
+  "homepage": "https://github.com/ezsfc/miles-gen",
+  "license": "MIT"
 }
